Fix bass emulator volume knob position on smaller view ports

--- a/app/assets/stylesheets/bass/form.scss
+++ b/app/assets/stylesheets/bass/form.scss
@@ -73,8 +73,8 @@
   }
 
   #volume {
-    left: 88.7%;
-    top: 35%;
+    left: 87%;
+    top: 32.2%;
   }
 
   #led {
@@ -181,6 +181,11 @@
     #peak {
       top: 35%;
       left: 16.25%;
+    }
+
+    #volume {
+      left: 88.7%;
+      top: 35%;
     }
   }
 }
